--- a/portfolio.html
+++ b/portfolio.html
@@ -41,42 +41,49 @@
            </ul>
         <ul class="portfolio-list list">
             <li class="portfolio-item ">
+                <a href="/" class="portfolio-link link">
+                    <div class="portfolio-box">
+                        <div class="portfolio-overlay">
+                            <p class="overlay-description">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                        </div>
+                        <img class="portfolio-img" src="./images/portfolio-1.jpg" alt="Banking App Interface Concept" width="360" height="300"> 
+                    </div>
+                <div class="portfolio-thumb">
+                    <h2 class="portfolio-title">Banking App Interface Concept</h2>
+                    <p class="portfolio-description">App</p>
+                </div>
+                </a>
+            </li>
+            <li class="portfolio-item">
+                <a href="/" class="portfolio-link link">
+                    <div class="portfolio-box">
+                        <div class="portfolio-overlay">
+                            <p class="overlay-description">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                        </div>
+                        <img class="portfolio-img" src="./images/portfolio-2.jpg" alt="Cashless Payment" width="360" height="300">
+                    </div>
+                <div class="portfolio-thumb">
+                    <h2 class="portfolio-title">Cashless Payment</h2>
+                    <p class="portfolio-description">Marketing</p>
+                </div>
+                </a>
+            </li>
+            <li class="portfolio-item">
+               <a href="/" class="portfolio-link link">
                 <div class="portfolio-box">
                     <div class="portfolio-overlay">
                         <p class="overlay-description">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                     </div>
-                    <img class="portfolio-img" src="./images/portfolio-1.jpg" alt="Banking App Interface Concept" width="360" height="300"> 
+                    <img class="portfolio-img" src="./images/portfolio-3.jpg" alt="Meditaion App" width="360" height="300">
+                   </div>
+                <div class="portfolio-thumb">
+                    <h2 class="portfolio-title">Meditaion App</h2>
+                    <p class="portfolio-description">App</p>
                 </div>
-            <div class="portfolio-thumb">
-                <h2 class="portfolio-title">Banking App Interface Concept</h2>
-                <p class="portfolio-description">App</p>
-            </div>
+               </a>
             </li>
             <li class="portfolio-item">
-                <div class="portfolio-box">
-                    <div class="portfolio-overlay">
-                        <p class="overlay-description">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
-                    </div>
-                    <img class="portfolio-img" src="./images/portfolio-2.jpg" alt="Cashless Payment" width="360" height="300">
-                </div>
-            <div class="portfolio-thumb">
-                <h2 class="portfolio-title">Cashless Payment</h2>
-                <p class="portfolio-description">Marketing</p>
-            </div>
-            </li>
-            <li class="portfolio-item">
-               <div class="portfolio-box">
-                <div class="portfolio-overlay">
-                    <p class="overlay-description">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
-                </div>
-                <img class="portfolio-img" src="./images/portfolio-3.jpg" alt="Meditaion App" width="360" height="300">
-               </div>
-            <div class="portfolio-thumb">
-                <h2 class="portfolio-title">Meditaion App</h2>
-                <p class="portfolio-description">App</p>
-            </div>
-            </li>
-            <li class="portfolio-item">
+               <a href="/" class="portfolio-link link">
                 <div class="portfolio-box">
                     <div class="portfolio-overlay">
                         <p class="overlay-description">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
@@ -87,66 +94,77 @@
                 <h2 class="portfolio-title">Taxi Service</h2>
                 <p class="portfolio-description">Marketing</p>
             </div>
+               </a>
             </li>
             <li class="portfolio-item">
-                <div class="portfolio-box">
-                    <div class="portfolio-overlay">
-                        <p class="overlay-description">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                <a href="/" class="portfolio-link link">
+                    <div class="portfolio-box">
+                        <div class="portfolio-overlay">
+                            <p class="overlay-description">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                        </div>
+                        <img class="portfolio-img" src="./images/portfolio-5.jpg" alt="Screen Illustrations" width="360" height="300">
                     </div>
-                    <img class="portfolio-img" src="./images/portfolio-5.jpg" alt="Screen Illustrations" width="360" height="300">
+                <div class="portfolio-thumb">
+                    <h2 class="portfolio-title">Screen Illustrations</h2>
+                    <p class="portfolio-description">Design</p>
                 </div>
-            <div class="portfolio-thumb">
-                <h2 class="portfolio-title">Screen Illustrations</h2>
-                <p class="portfolio-description">Design</p>
-            </div>
+                </a>
             </li>
             <li class="portfolio-item">
-                <div class="portfolio-box">
-                    <div class="portfolio-overlay">
-                        <p class="overlay-description">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                <a href="/" class="portfolio-link link">
+                    <div class="portfolio-box">
+                        <div class="portfolio-overlay">
+                            <p class="overlay-description">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                        </div>
+                        <img class="portfolio-img" src="./images/portfolio-6.jpg" alt="Online Courses" width="360" height="300">
                     </div>
-                    <img class="portfolio-img" src="./images/portfolio-6.jpg" alt="Online Courses" width="360" height="300">
+                <div class="portfolio-thumb">
+                    <h2 class="portfolio-title">Online Courses</h2>
+                    <p class="portfolio-description">Marketing</p>
                 </div>
-            <div class="portfolio-thumb">
-                <h2 class="portfolio-title">Online Courses</h2>
-                <p class="portfolio-description">Marketing</p>
-            </div>
+                </a>
             </li>
             <li class="portfolio-item">
-                <div class="portfolio-box">
-                    <div class="portfolio-overlay">
-                        <p class="overlay-description">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                <a href="/" class="portfolio-link link">
+                    <div class="portfolio-box">
+                        <div class="portfolio-overlay">
+                            <p class="overlay-description">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                        </div>
+                        <img class="portfolio-img" src="./images/portfolio-7.jpg" alt="Instagram Stories Concept" width="360" height="300">
                     </div>
-                    <img class="portfolio-img" src="./images/portfolio-7.jpg" alt="Instagram Stories Concept" width="360" height="300">
+                <div class="portfolio-thumb">
+                    <h2 class="portfolio-title">Instagram Stories Concept</h2>
+                    <p class="portfolio-description">Design</p>
                 </div>
-            <div class="portfolio-thumb">
-                <h2 class="portfolio-title">Instagram Stories Concept</h2>
-                <p class="portfolio-description">Design</p>
-            </div>
+                </a>
             </li>
             <li class="portfolio-item">
-                <div class="portfolio-box">
-                    <div class="portfolio-overlay">
-                        <p class="overlay-description">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                <a href="/" class="portfolio-link link">
+                    <div class="portfolio-box">
+                        <div class="portfolio-overlay">
+                            <p class="overlay-description">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                        </div>
+                        <img class="portfolio-img" src="./images/portfolio-8.jpg" alt="Organic Food" width="360" height="300">
                     </div>
-                    <img class="portfolio-img" src="./images/portfolio-8.jpg" alt="Organic Food" width="360" height="300">
+                <div class="portfolio-thumb">
+                    <h2 class="portfolio-title">Organic Food</h2>
+                    <p class="portfolio-description">Web Site</p>
                 </div>
-            <div class="portfolio-thumb">
-                <h2 class="portfolio-title">Organic Food</h2>
-                <p class="portfolio-description">Web Site</p>
-            </div>
+                </a>
             </li>
             <li class="portfolio-item">
-                <div class="portfolio-box">
-                    <div class="portfolio-overlay">
-                        <p class="overlay-description">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                <a href="/" class="portfolio-link link">
+                    <div class="portfolio-box">
+                        <div class="portfolio-overlay">
+                            <p class="overlay-description">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                        </div>
+                        <img class="portfolio-img" src="./images/portfolio-9.jpg" alt="Fresh Coffee" width="360" height="300">
                     </div>
-                    <img class="portfolio-img" src="./images/portfolio-9.jpg" alt="Fresh Coffee" width="360" height="300">
+                <div class="portfolio-thumb">
+                    <h2 class="portfolio-title">Fresh Coffee</h2>
+                    <p class="portfolio-description">Web Site</p>
                 </div>
-            <div class="portfolio-thumb">
-                <h2 class="portfolio-title">Fresh Coffee</h2>
-                <p class="portfolio-description">Web Site</p>
-            </div>
+                </a>
             </li>
         </ul>
         </div>
